melissa comments addressed

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -889,7 +889,7 @@ not_standardized_data
 ```
 
 And then we apply the `scale` function to every column in the data frame 
-using `mutate` + `across`.
+using `mutate` and `across`.
 
 ```{r 10-mapdf-scale-data}
 standardized_data <- not_standardized_data |>
