fixing multicollinearity example from inches to feet

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -692,7 +692,7 @@ Since the two people are each slightly inaccurate, the two measurements might
 not agree exactly, but they are very strongly linearly related to each other,
 as shown in Figure \@ref(fig:08-lm-multicol).
 
-```{r 08-lm-multicol, fig.height = 3.5, fig.width = 4.5, warning = FALSE, echo = FALSE, fig.cap = "Scatter plot of house size (in square inches) versus house size (in square feet)."}
+```{r 08-lm-multicol, fig.height = 3.5, fig.width = 4.5, warning = FALSE, echo = FALSE, fig.cap = "Scatter plot of house size (in square feet) measured by person 1 versus house size (in square feet) measured by person 2."}
 sacramento_train <- sacramento_train |>
                           mutate(sqft1 = sqft + 100 * sample(1000000,
                                                              size=nrow(sacramento_train),
@@ -706,8 +706,8 @@ sacramento_train <- sacramento_train |>
 
 lm_plot_multicol_1 <- ggplot(sacramento_train) +
   geom_point(aes(x = sqft, y = sqft1), alpha=0.4)+
-  xlab("House size (square feet)") +
-  ylab("House size (square inches)") 
+  xlab("House size 1 (square feet)") +
+  ylab("House size 2 (square feet)") 
 lm_plot_multicol_1
 ```
 
