changing labels on plot

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -706,8 +706,8 @@ sacramento_train <- sacramento_train |>
 
 lm_plot_multicol_1 <- ggplot(sacramento_train) +
   geom_point(aes(x = sqft, y = sqft1), alpha=0.4)+
-  xlab("House size 1 (square feet)") +
-  ylab("House size 2 (square feet)") 
+  xlab("House size measurement 1 (square feet)") +
+  ylab("House size measurement 2 (square feet)") 
 lm_plot_multicol_1
 ```
 
