--- a/viz.Rmd
+++ b/viz.Rmd
@@ -143,7 +143,7 @@ alternative.
 ## Refining the visualization
 #### *Convey the message, minimize noise* {-}
 
-Just being able to make a visualization in R with `ggplot2` (or any other tool
+Just being able to make a visualization in R (or any other tool
 for that matter) doesn't mean that it effectively communicates your message to
 others. Once you have selected a broad type of visualization to use, you will
 have to refine it to suit your particular need.  Some rules of thumb for doing
@@ -186,7 +186,9 @@ understand and remember your message quickly.
 #### *Build the visualization iteratively* {-}
 
 This section will cover examples of how to choose and refine a visualization given a data set and a question that you want to answer, 
-and then how to create the visualization in R \index{ggplot} using `ggplot2`.  To use the `ggplot2` package, we need to load the `tidyverse` metapackage.
+and then how to create the visualization in R \index{ggplot} using the `ggplot2` R package.  
+Given that the `ggplot2`package is one of the packages installed 
+and loaded by the `tidyverse` metapackage, we still only need to load that one package:
 
 ```{r 03-tidyverse, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -479,7 +481,8 @@ labels and make the font more readable:
 ```{r 03-data-faithful-scatter-2, warning=FALSE, message=FALSE, fig.height = 3.5, fig.width = 3.75, fig.align = "center",  fig.pos = "H", out.extra="", fig.cap = "Scatter plot of waiting time and eruption time with clearer axes and labels."}
 faithful_scatter <- ggplot(faithful, aes(x = waiting, y = eruptions)) +
   geom_point() +
-  labs(x = "Waiting Time (mins)", y = "Eruption Duration (mins)") +
+  xlab("Waiting Time (mins)") + 
+  ylab("Eruption Duration (mins)") +
   theme(text = element_text(size = 12))
 
 faithful_scatter
@@ -529,8 +532,8 @@ improve readability.
 ```{r 03-mother-tongue-vs-most-at-home-labs, fig.height=3.5, fig.width=3.75, fig.align = "center", warning=FALSE, fig.pos = "H", out.extra="", fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels."}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
-  labs(x = "Language spoken most at home \n (number of Canadian residents)",
-       y = "Mother tongue \n (number of Canadian residents)") +
+  xlab("Language spoken most at home \n (number of Canadian residents)") +
+  ylab("Mother tongue \n (number of Canadian residents)") +
   theme(text = element_text(size = 12))
 ```
 
@@ -596,8 +599,8 @@ library(scales)
 
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point() +
-  labs(x = "Language spoken most at home \n (number of Canadian residents)",
-       y = "Mother tongue \n (number of Canadian residents)") +
+  xlab("Language spoken most at home \n (number of Canadian residents)") +
+  ylab("Mother tongue \n (number of Canadian residents)") +
   theme(text = element_text(size = 12)) +
   scale_x_log10(labels = label_comma()) +
   scale_y_log10(labels = label_comma())
@@ -651,8 +654,8 @@ the final result.
 ```{r 03-mother-tongue-vs-most-at-home-scale-props, fig.height=3.5,  fig.width=3.75, fig.align = "center",  warning=FALSE, fig.pos = "H", out.extra="", fig.cap = "Scatter plot of percentage of Canadians reporting a language as their mother tongue vs the primary language at home."}
 ggplot(can_lang, aes(x = most_at_home_percent, y = mother_tongue_percent)) +
   geom_point() +
-  labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
-       y = "Mother tongue \n (percentage of Canadian residents)") +
+  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
+  ylab("Mother tongue \n (percentage of Canadian residents)") +
   theme(text = element_text(size = 12)) +
   scale_x_log10(labels = comma) +
   scale_y_log10(labels = comma)
@@ -710,8 +713,8 @@ ggplot(can_lang, aes(x = most_at_home_percent,
                      y = mother_tongue_percent, 
                      color = category)) +
   geom_point() +
-  labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
-       y = "Mother tongue \n (percentage of Canadian residents)") +
+  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
+  ylab("Mother tongue \n (percentage of Canadian residents)") +
   theme(text = element_text(size = 12)) +
   scale_x_log10(labels = comma) +
   scale_y_log10(labels = comma)
@@ -736,8 +739,8 @@ ggplot(can_lang, aes(x = most_at_home_percent,
                      y = mother_tongue_percent, 
                      color = category)) +
   geom_point() +
-  labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
-       y = "Mother tongue \n (percentage of Canadian residents)") +
+  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
+  ylab("Mother tongue \n (percentage of Canadian residents)") +
   theme(text = element_text(size = 12),
         legend.position = "top",
         legend.direction = "vertical") +
@@ -783,8 +786,8 @@ ggplot(can_lang, aes(x = most_at_home_percent,
                      color = category, 
                      shape = category)) +
   geom_point() +
-  labs(x = "Language spoken most at home \n (percentage of Canadian residents)",
-       y = "Mother tongue \n (percentage of Canadian residents)") +
+  xlab("Language spoken most at home \n (percentage of Canadian residents)") +
+  ylab("Mother tongue \n (percentage of Canadian residents)") +
   theme(text = element_text(size = 12),
         legend.position = "top",
         legend.direction = "vertical") +
@@ -1087,7 +1090,7 @@ instead of stacked bars
 (which is the default for bar plots or histograms 
 when they are colored by another categorical variable).
 
-```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE,  fig.height = 2.75, fig.width = 4.5, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "Histogram of Michelson's speed of light data colored by experiment."}
+```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE,  fig.height = 2.75, fig.width = 4.5, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "Histogram of Michelson's speed of light data where an attempt is made to color the bars by experiment."}
 morley_hist <- ggplot(morley, aes(x = Speed, fill = Expt)) +
   geom_histogram(alpha = 0.5, position = "identity") +
   geom_vline(xintercept = 792.458, linetype = "dashed", size = 1.0)
@@ -1500,7 +1503,7 @@ JPG format is twice as large as the PNG format since the JPG compression
 algorithm is designed for natural images (not plots). 
 
 In Figure \@ref(fig:03-raster-image), we also show what
-the images look like when we zoom in to a rectangle with only 3 data points.
+the images look like when we zoom in to a rectangle with only 2 data points.
 You can see why vector graphics formats are so useful: because they're just
 based on mathematical formulas, vector graphics can be scaled up to arbitrary
 sizes.  This makes them great for presentation media of all sizes, from papers
