tc writing polish end of abs/rel paths section

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -115,11 +115,12 @@ happy_data <- read_csv("data/happiness_report.csv")
 happy_data <- read_csv("/home/dsci-100/worksheet_02/data/happiness_report.csv")
 ```
 
-So which one should you use? Generally speaking, to ensure your code can be run 
-on a different computer, you should use relative paths. An added bonus is that 
-it's also less typing! Generally, you should use relative paths because the file's 
-absolute path (the names of 
-folders between the computer's root, represented by `/`, and the file) isn't usually the same 
+So which one should you use? Generally speaking, you should use relative paths. 
+Using a relative path helps ensure that your code can be run 
+on a different computer (and as an added bonus, relative paths are often shorter&mdash;easier to type!).
+This is because a file's relative path is often the same across different computers, while a
+file's absolute path (the names of 
+all of the folders between the computer's root, represented by `/`, and the file) isn't usually the same 
 across different computers. For example, suppose Fatima and Jayden are working on a 
 project together on the `happiness_report.csv` data. Fatima's file is stored at 
 
@@ -135,18 +136,17 @@ their different usernames.  If Jayden has code that loads the
 `happiness_report.csv` data using an absolute path, the code won't work on
 Fatima's computer.  But the relative path from inside the `project` folder
 (`data/happiness_report.csv`) is the same on both computers; any code that uses
-relative paths will work on both!
-
-In the additional resources section, we include a link to a short video on the
+relative paths will work on both! In the additional resources section, 
+we include a link to a short video on the
 difference between absolute and relative paths. You can also check out the
 `here` package, which provides methods for finding and constructing file paths
 in R.  
 
-Your file could be stored locally, as we discussed, or it could also be
-somewhere on the internet (remotely). A *Uniform Resource Locator (URL)* (web
-address that looks something like `https://datasciencebook.ca/`) \index{URL} indicates the location of a resource on the internet and
-helps us retrieve that resource. Next, we will discuss how to get either
-locally or remotely stored data into R. 
+Beyond files stored on your computer (i.e., locally), we also need a way to locate resources
+stored elsewhere on the internet (i.e., remotely). For this purpose we use a *Uniform Resource Locator (URL)*,
+i.e., a web address that looks something like `https://datasciencebook.ca/`) \index{URL}.
+URLs indicate the location of a resource on the internet and
+help us retrieve that resource. 
 
 ## Reading tabular data from a plain text file into R
 
