minor wordsmith; notebox format fix

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -176,7 +176,7 @@ sub-folder, named `data`, relative to where we are running our R code.
 
 Here is what the file would look like in a plain text editor.
 
-> Note: A plain text editor is a program that that allows for editing of plain text. 
+> **Note:** A plain text editor is a program that enables you to edit plain text. 
 Plain text is text represented only by characters 
 and contains no meta-, character, paragraph or page specification data).
 
@@ -1102,7 +1102,7 @@ head(population_nodes)
 print_html_nodes(head(population_nodes))
 ```
 
-> Note: `head` is a function that is useful for viewing the first `n` parts
+> **Note:** `head` is a function that is useful for viewing the first `n` parts
 > of an R object, where the default value for `n` is 6. 
 > It is useful to know, as not all R objects have a nice and short
 > print method like tibbles (which print only the first 10 rows).
