tc wordsmith head notebox

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -1102,10 +1102,13 @@ head(population_nodes)
 print_html_nodes(head(population_nodes))
 ```
 
-> **Note:** `head` is a function that is useful for viewing the first `n` parts
-> of an R object, where the default value for `n` is 6. 
-> It is useful to know, as not all R objects have a nice and short
-> print method like tibbles (which print only the first 10 rows).
+> **Note:** `head` is a function that is often useful for viewing only a short
+> summary of an R object, rather than the whole thing (which may be quite a lot
+> to look at). For example, here `head` shows us only the first 6 items in the
+> `population_nodes` object. Note that some R objects by default print only a
+> small summary. For example, `tibble` data frames only show you the first 10 rows.
+> But not *all* R objects do this, and that's where the `head` function helps
+> summarize things for you.
 
 Next we extract the meaningful data&mdash;in other words, we get rid of the HTML code syntax and tags&mdash;from 
 the nodes using the `html_text`
