--- a/viz.Rmd
+++ b/viz.Rmd
@@ -143,7 +143,7 @@ alternative.
 ## Refining the visualization
 #### *Convey the message, minimize noise* {-}
 
-Just being able to make a visualization in R (or any other tool
+Just being able to make a visualization in R (or any other language,
 for that matter) doesn't mean that it effectively communicates your message to
 others. Once you have selected a broad type of visualization to use, you will
 have to refine it to suit your particular need.  Some rules of thumb for doing
