--- a/viz.Rmd
+++ b/viz.Rmd
@@ -185,10 +185,11 @@ understand and remember your message quickly.
 ## Creating visualizations with `ggplot2` 
 #### *Build the visualization iteratively* {-}
 
-This section will cover examples of how to choose and refine a visualization given a data set and a question that you want to answer, 
-and then how to create the visualization in R \index{ggplot} using the `ggplot2` R package.  
-Given that the `ggplot2`package is one of the packages installed 
-and loaded by the `tidyverse` metapackage, we still only need to load that one package:
+This section will cover examples of how to choose and refine a visualization
+given a data set and a question that you want to answer, and then how to create
+the visualization in R \index{ggplot} using the `ggplot2` R package. Given that
+the `ggplot2`package is loaded by the `tidyverse` metapackage, we still 
+need to load only `tidyverse':
 
 ```{r 03-tidyverse, warning=FALSE, message=FALSE}
 library(tidyverse)
