--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -167,7 +167,7 @@ Lists \index{list} are also objects in R that have multiple, ordered elements.
 Vectors and lists differ by the requirement of element type
 consistency. All elements within a single vector must be of the same type (e.g.,
 all elements are characters), whereas elements within a single list can be of
-different types (e.g., characters, integers, logicals, and even other lists; Figure \@ref(fig:02-vec-vs-list)). 
+different types (e.g., characters, integers, logicals, and even other lists). See Figure \@ref(fig:02-vec-vs-list). 
 
 ``` {r 02-vec-vs-list, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A vector versus a list.", fig.retina = 2, out.width = "100%"}
 image_read("img/data_frame_slides_cdn/data_frame_slides_cdn.008.jpeg") %>%
