--- a/reading.Rmd
+++ b/reading.Rmd
@@ -139,7 +139,7 @@ in R.
 
 Beyond files stored on your computer (i.e., locally), we also need a way to locate resources
 stored elsewhere on the internet (i.e., remotely). For this purpose we use a *Uniform Resource Locator (URL)*,
-i.e., a web address that looks something like `https://datasciencebook.ca/`) \index{URL}.
+i.e., a web address that looks something like `https://datasciencebook.ca/. \index{URL}
 URLs indicate the location of a resource on the internet and
 help us retrieve that resource. 
 
