simplified plaintext notebox

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -172,8 +172,8 @@ sub-folder, named `data`, relative to where we are running our R code.
 Here is what the file would look like in a plain text editor.
 
 > **Note:** A plain text editor is a program that enables you to edit plain text. 
-Plain text is text represented only by characters 
-and contains no meta-, character, paragraph or page specification data).
+> Plain text is text data that has no additional formatting 
+> (e.g., bold, italics, line spacing, fonts, font sizes, and embedded images).
 
 ```code
 category,language,mother_tongue,most_at_home,most_at_work,lang_known
