fixing formatting reading

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -139,7 +139,7 @@ in R.
 
 Beyond files stored on your computer (i.e., locally), we also need a way to locate resources
 stored elsewhere on the internet (i.e., remotely). For this purpose we use a *Uniform Resource Locator (URL)*,
-i.e., a web address that looks something like `https://datasciencebook.ca/. \index{URL}
+i.e., a web address that looks something like https://datasciencebook.ca/. \index{URL}
 URLs indicate the location of a resource on the internet and
 help us retrieve that resource. 
 
@@ -168,12 +168,7 @@ language data from the 2016 Canadian census. \index{Canadian languages!canlang d
 We put `data/` before the file's
 name when we are loading the data set because this data set is located in a
 sub-folder, named `data`, relative to where we are running our R code.
-
-Here is what the file would look like in a plain text editor.
-
-> **Note:** A plain text editor is a program that enables you to edit plain text. 
-> Plain text is text data that has no additional formatting 
-> (e.g., bold, italics, line spacing, fonts, font sizes, and embedded images).
+Here is what the text in the file `data/can_lang.csv` looks like.
 
 ```code
 category,language,mother_tongue,most_at_home,most_at_work,lang_known
@@ -354,7 +349,7 @@ specify that there are no column names to assign, and give it the value of
 > **Note:** `\t` is an example of an *escaped character*, 
 > which always starts with a backslash (`\`). \index{escape character}
 > Escaped characters are used to represent non-printing characters 
-> (like the tab) or characters with special meanings (such as quotation marks). 
+> (like the tab) or those with special meanings (such as quotation marks). 
 
 ```{r}
 canlang_data <- read_delim("data/can_lang.tsv", 
