minor fix to broken reference to old documentation

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -687,7 +687,7 @@ Figure \@ref(fig:01-help) shows the documentation that will pop up,
 including a high-level description of the function, its arguments, 
 a description of each, and more. Note that you may find some of the
 text in the documentation a bit too technical right now 
-(for example, what is `dbplyr`, and what is grouped data?).
+(for example, what is `dbplyr`, and what is a lazy data frame?).
 Fear not: as you work through this book, many of these terms will be introduced
 to you, and slowly but surely you will become more adept at understanding and navigating 
 documentation like that shown in Figure \@ref(fig:01-help). But do keep in mind that the documentation
