minor spacing isseu in viz list

--- a/viz.Rmd
+++ b/viz.Rmd
@@ -164,9 +164,9 @@ understand and remember your message quickly.
   colorblindness (a surprisingly large fraction of the overall 
   population&mdash;from about 1% to 10%, depending on sex and ancestry [@deebblind]).
   For example, [ColorBrewer](https://colorbrewer2.org) 
-  and [the `RColorBrewer` R package](https://cran.r-project.org/web/packages/RColorBrewer/index.html) [@RColorBrewer]  
-  provide the ability to pick such color schemes, and you can check
-  your visualizations after you have created them by uploading to online tools
+  and [the `RColorBrewer` R package](https://cran.r-project.org/web/packages/RColorBrewer/index.html) [@RColorBrewer] provide the 
+  ability to pick such color schemes, and you can check your visualizations 
+  after you have created them by uploading to online tools
   such as a [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/).
 - Redundancy can be helpful; sometimes conveying the same message in multiple ways reinforces it for the audience.
 
