--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -848,7 +848,7 @@ To build a bit more intuition, what happens if we keep increasing the number of
 neighbors $K$? In fact, the accuracy actually starts to decrease! 
 Let's specify a much larger range of values of $K$ to try in the `grid` 
 argument of `tune_grid`. Figure \@ref(fig:06-lots-of-ks) shows a plot of estimated accuracy as 
-we vary $K$ from 1 to almost the number of observations in the data set.
+we vary $K$ from 1 to almost the number of observations in the training set.
 
 ```{r 06-lots-of-ks-seed, message = FALSE, echo = FALSE, warning = FALSE}
 # hidden seed
