prevent webscraping from running

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -1046,7 +1046,7 @@ library(rvest)
 
 Next, we tell R what page we want to scrape by providing the webpage's URL in quotations to the function `read_html`:
 
-```{r 01-specify-page}
+```r
 page <- read_html("https://en.wikipedia.org/wiki/Canada")
 ```
 
@@ -1078,7 +1078,7 @@ having one very long line of code with the string
 `"td:nth-child(5),td:nth-child(7),.infobox:nth-child(122) td:nth-child(1),.infobox td:nth-child(3)"`
 as the second argument of `html_nodes`:
 
-```{r 01-select-nodes, results = 'hide', echo = TRUE}
+```r
 selectors <- paste("td:nth-child(5)",
              "td:nth-child(7)",
              ".infobox:nth-child(122) td:nth-child(1)",
@@ -1088,8 +1088,14 @@ population_nodes <- html_nodes(page, selectors)
 head(population_nodes)
 ```
 
-```{r echo = FALSE}
-print_html_nodes(head(population_nodes))
+```html
+## {xml_nodeset (6)}
+## [1] <td style="text-align:left;background:#f0f0f0;"><a href="/wiki/London,_On ...
+## [2] <td style="text-align:right;">543,551\n</td>
+## [3] <td style="text-align:left;background:#f0f0f0;"><a href="/wiki/Halifax,_N ...
+## [4] <td style="text-align:right;">465,703\n</td>
+## [5] <td style="text-align:left;background:#f0f0f0;">\n<a href="/wiki/St._Cath ...
+## [6] <td style="text-align:right;">433,604\n</td>
 ```
 
 > **Note:** `head` is a function that is often useful for viewing only a short
@@ -1105,9 +1111,13 @@ the nodes using the `html_text`
 function. In the case of the example
 node above, `html_text` function returns `"London"`.
 
-```{r 01-get-text}
+```r
 population_text <- html_text(population_nodes)
 head(population_text)
+```
+```html
+## [1] "London"                 "543,551\n"              "Halifax"               
+## [4] "465,703\n"              "St. Catharines–Niagara" "433,604\n"
 ```
 
 Fantastic! We seem to have extracted the data of interest from the 
