fixed html page url for classification 1

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -1,4 +1,4 @@
-# Classification I: training & predicting {#classification}
+# Classification I: training & predicting {#classification1}
 
 ```{r classification1-setup, echo = FALSE, message = FALSE, warning = FALSE}
 library(formatR)
