fix to broken classification1 ref

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -289,7 +289,7 @@ glimpse(cancer_test)
 
 We can see from `glimpse` in \index{glimpse} the code above that the training set contains `r nrow(cancer_train)`
 observations, while the test set contains `r nrow(cancer_test)` observations. This corresponds to
-a train / test split of 75% / 25%, as desired. Recall from Chapter \@ref(classification)
+a train / test split of 75% / 25%, as desired. Recall from Chapter \@ref(classification1)
 that we use the `glimpse` function to view data with a large number of columns,
 as it prints the data such that the columns go down the page (instead of across).
 
