broken ref fixes

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -129,7 +129,7 @@ This is covered in detail in Chapter \@ref(viz), but again appears regularly thr
 Classification is used to answer predictive questions.
 For example, you might use classification to answer the following question:
 *Given measurements of a tumor's average cell area and perimeter, is the tumor benign or malignant?*
-Classification is covered in Chapters \@ref(classification) and \@ref(classification2).
+Classification is covered in Chapters \@ref(classification1) and \@ref(classification2).
 4. **Regression:**  \index{regression!overview} predicting a quantitative value for a new observation. 
 Regression is also used to answer predictive questions.
 For example, you might use regression to answer the following question:
