broken ref fixes

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -39,7 +39,7 @@ we will split our data into training, validation, and test sets, we will
 use `tidymodels` workflows, we will use a K-nearest neighbors (KNN) 
 approach to make predictions, and we will use cross-validation to choose K.
 Because of how similar these procedures are, make sure to read Chapters
-\@ref(classification) and \@ref(classification2) before reading 
+\@ref(classification1) and \@ref(classification2) before reading 
 this one&mdash;we will move a little bit faster here with the
 concepts that have already been covered.
 This chapter will primarily focus on the case where there is a single predictor, 
