moved output commands for pdf into index.rmd

--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -20,6 +20,23 @@ cover-image: "img/ds-a-first-intro-cover.jpg"
 site: bookdown::bookdown_site
 description: "This is a textbook for teaching a first introduction to data science."
 github-repo: UBC-DSCI/introduction-to-datascience
+output:
+  bookdown::pdf_book:
+  includes:
+    in_header: latex/preamble.tex
+    before_body: latex/before_body.tex
+    after_body: latex/after_body.tex
+  keep_tex: true
+  dev: "cairo_pdf"
+  latex_engine: xelatex
+  citation_package: natbib
+  template: null
+  pandoc_args: --top-level-division=chapter
+  toc_depth: 3
+  toc_unnumbered: false
+  toc_appendix: true
+  quote_footer: ["\\VA{", "}{}"]
+  highlight_bw: true
 ---
 
 ```{r setup-pdf, include=FALSE}
