remove latex/ folder in index.rmd pdf

--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -23,9 +23,9 @@ github-repo: UBC-DSCI/introduction-to-datascience
 output:
   bookdown::pdf_book:
   includes:
-    in_header: latex/preamble.tex
-    before_body: latex/before_body.tex
-    after_body: latex/after_body.tex
+    in_header: preamble.tex
+    before_body: before_body.tex
+    after_body: after_body.tex
   keep_tex: true
   dev: "cairo_pdf"
   latex_engine: xelatex
