--- a/index.Rmd
+++ b/index.Rmd
@@ -1,3 +1,8 @@
+<!-- NOTE: do not edit the "title:" entry in the top YAML, or the "# Welcome!" line below the top YAML without *also* editing
+the build_pdf.sh script. The build_pdf.sh script builds the PDF version of the book, which does not include the cover image 
+or the welcome text. However, it doesn't seem possible with bookdown to handle these two differences between HTML
+and PDF easily. So the "build_pdf.sh" script uses 'sed' to remove these two things first from this index.Rmd file 
+before compiling. If you edit the title/Welcome! lines, those 'sed' commands probably won't work any more.-->
 --- 
 title: |
     ![](img/ds-a-first-intro-graphic.jpg) 
