Minor wording fixes ch1

--- a/source/intro.Rmd
+++ b/source/intro.Rmd
@@ -392,7 +392,7 @@ of the `category` column with the value `"Aboriginal languages"`; you will learn
 many other kinds of logical statements in Chapter \@ref(wrangling).  Similar to
 when we loaded the data file and put quotes around the file name, here we need
 to put quotes around `"Aboriginal languages"`. Using quotes tells R that this
-is a string *value* \index{string} and not one of the special words that make up R
+is a string *value* \index{string} and not one of the special words that make up the R
 programming language, or one of the names we have given to data frames in the
 code we have already written. 
 
@@ -449,8 +449,8 @@ selected_lang
 
 We have used `filter` and `select` to obtain a table with only the Aboriginal
 languages in the data set and their associated counts. However, we want to know
-the **ten** languages that are spoken most often. As a next step, we could
-order the `mother_tongue` column from greatest to least and then extract only
+the **ten** languages that are spoken most often. As a next step, we will
+order the `mother_tongue` column from largest to smallest value and then extract only
 the top ten rows. This is where the `arrange` and `slice` functions come to the
 rescue! \index{arrange}\index{slice}
 
@@ -512,7 +512,7 @@ book: many of the functions from `tidyverse` require tidy data, including the
 formally introduce tidy data in Chapter \@ref(wrangling).
 
 We will make a bar plot to visualize our data. A bar plot \index{plot|see{visualization}}\index{visualization|see{ggplot}}\index{visualization!bar} is a chart where the
-heights of the bars represent certain values, like counts or proportions. We
+lengths of the bars represent certain values, like counts or proportions. We
 will make a bar plot using the `mother_tongue` and `language` columns from our
 `ten_lang` data frame. To create a bar plot of these two variables using the 
 `ggplot` function, we must specify the data frame, which variables
